# remip

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  gemini-issue-scheduled-triage.yml  release.yml
.serena/: project.yml
.tmp/docs/: design.md  requirements.md  tasks.md  test-design.md
docs/develop/: design.md  requirements.md  tasks.md  test-design.md
mip-api-client/: pyproject.toml
mip-client/: pyproject.toml
mip-client/mip_client/: solver.py
remip/: Dockerfile  README.md  pyproject.toml
remip-client/: README.md  pyproject.toml  test_pyodide.html
remip-client/src/remip_client/: __init__.py  _version.py  solver.py
remip-client/tests/: test_client.py  test_client_integration.py  test_client_unit.py  test_solver.py
remip-client/tests/node/: index.js  test_solver_pyodide.js
remip/src/remip/: _version.py  main.py  models.py  services.py
remip/src/remip/solvers/: scip_wrapper.py
remip/tests/: test_api.py  test_models.py  test_solver_wrapper.py
scripts/: run-all-tests.sh  test-changed-files.sh  test-pyodide.sh
src/mip_api/: models.py
src/mip_api/solvers/: scip_wrapper.py
src/remip/: config.py  main.py  models.py  services.py
src/remip/solvers/: scip_wrapper.py
tests/: test_api.py  test_client.py  test_models.py  test_solver_wrapper.py
