[project]
name = "mip-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pulp",
    "httpx",
]

[project.scripts]
mip-api = "mip_api:main"

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
