[project]
name = "remip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyscipopt",
]

[project.scripts]
remip = "remip.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 128
select = ["E", "F", "I"]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pulp>=3.2.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
]
