[project]
name = "remip-client"
version = "0.1.0"
description = "A client library for the MIP Solver API"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pulp",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
