[project]
name = "remip-client"
version = "0.1.0"
description = "A client library for the MIP Solver API"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pulp",
    "httpx",
]

[project.optional-dependencies]
pyodide = ["pyodide-http"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "remip",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
]

[tool.uv.sources]
remip = { path = "..", editable = true }
