[project]
name = "remip-client"
dynamic = ["version"]
description = "A client library for the MIP Solver API"
authors = [
    { name = "ohtaman", email = "ohtamans@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pulp",
    "httpx",
]

[project.optional-dependencies]
pyodide = ["pyodide-http"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
